refactored TypeHashMap to be more like TypeGraph